# Stronk

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  Makefile  build.bat  build.sh  clean.bat  clean.sh  sedescq  sedescrep  updateCopyright.sh
lib/: c11threads.h  safe_math.h  thpool.c  thpool.h
lib/algo/: arraylist.c  compare-int.c  compare-int.h  compare-pointer.c  compare-pointer.h  compare-string.c  compare-string.h  compare-ull.c  compare-ull.h  hash-int.c  hash-int.h  hash-pointer.c  hash-pointer.h  hash-string.c  hash-string.h  hash-table.c  hash-table.h  hash-ull.c  hash-ull.h
lib/crossuuid/: crossuuid.c  crossuuid.h
lib/jansson/: dump.c  hashtable.c  hashtable.h  hashtable_seed.c  jansson.h  jansson_config.h  jansson_private.h  load.c  memory.c  pack_unpack.c  strbuffer.c  strbuffer.h  utf.c  utf.h  value.c
lib/psnip/: .appveyor.yml
src/: connection.h  entity.h  fposition.h  location.h  logging.c  logging.h  main.c  mcpr.c  mcpr.h  network.c  network.h  openssl.h  player.h  server.c  server.h  stack.c  stack.h  stronk.h  util.c  util.h  warnings.h  world.c  world.h
src/chat/: chat.c  chat.h
src/logging/: logging.c  logging.h
src/mapi/: mapi.c  mapi.h
src/mcpr/: abstract_packet.c  abstract_packet.h  bstreams.c  bstreams.h  client.c  client.h  codec.c  codec.h  connection.c  connection.h  crypto.c  crypto.h  error.c  error.h  fd_streams.h  fdstreams.c  fdstreams.h  fpstreams.c  fpstreams.h  internal.h  mapi.c  mapi.h  mcpr.c  mcpr.h  packet.c  packet.h  streams.c  streams.h  util.h
src/network/: connection.h  network.c  network.h  player.h
src/network/packethandlers/: handshake.c  login.c  packethandlers.h  play.c  status.c
src/ninerr/: ninerr.c  ninerr.h
src/ninio/: bstream.c  bstream.h  buffer.c  fileutils.h  fmux.c  logging.h  ninio.h  util.h
src/ninio/bstreams/: bstream_black_hole.c  bstream_buffered.c  bstream_fd.c  fopencookie.c
src/ninstd/: mem.c  mem.h  types.h
src/ninuuid/: ninuuid.c  ninuuid.h
src/stronk/server/: server.c  server.h
src/stronk/server/world/: world.h
src/world/: block.h  blockpos.h  entity.h  entitypos.h  fposition.h  location.h  positions.h  world.c  world.h
tests/: main.c  testing.h
tests/mcpr/: test_codec.c  test_codec.h  test_crypto.c  test_crypto.h
